# Analizador-de-canciones-DSP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.es.md  README.md  build.bat  build.sh  docker-compose.yml  main.py  requirements.txt  tunescope.spec
.github/workflows/: ci.yml  release.yml
music-analyzer/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
music-analyzer/src/config/: __init__.py
music-analyzer/src/controller/: main_controller.py
music-analyzer/src/model/: audio_file.py  feature_extractor.py  playlist_analyzer.py
music-analyzer/src/view/: main_window.py  visualizer.py
music-analyzer/tests/: conftest.py  test_audio_file.py  test_feature_extractor.py  test_integration.py  test_results.py
music-analyzer/tests/fixtures/: generate_readme_assets.py  generate_wav.py
src/: persist.py
src/config/: __init__.py
src/controller/: main_controller.py
src/model/: audio_file.py  feature_extractor.py
src/view/: main_window.py  visualizer.py
tests/: test_audio_file.py  test_feature_extractor.py  test_integration.py
